# clawed-code

./: .claude_todos.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  E2E_TEST_REPORT.md  README.md  REVIEW_REPORT.md  TEST_REPORT.md  count_unwrap.py
crates/claude-agent/: Cargo.toml
crates/claude-agent/src/: audit.rs  bus_adapter.rs  coordinator.rs  cost.rs  cron_scheduler.rs  dispatch_agent.rs  executor.rs  lib.rs  memory_extractor.rs  state.rs  task_runner.rs  traits.rs
crates/claude-agent/src/compact/: memory.rs  micro.rs  mod.rs
crates/claude-agent/src/engine/: builder.rs  impl_traits.rs  mod.rs  tests.rs
crates/claude-agent/src/hooks/: execution.rs  mod.rs  tests.rs
crates/claude-agent/src/permissions/: auto_classifier.rs  helpers.rs  mod.rs  tests.rs  tui.rs
crates/claude-agent/src/plugin/: manifest.rs  mod.rs
crates/claude-agent/src/query/: e2e_tests.rs  helpers.rs  mod.rs  tests.rs
crates/claude-agent/src/system_prompt/: mod.rs  sections.rs
crates/claude-agent/tests/: integration.rs
crates/claude-api/: Cargo.toml
crates/claude-api/src/: client.rs  files.rs  lib.rs  model.rs  provider.rs  retry.rs  types.rs  usage.rs
crates/claude-api/src/openai/: mod.rs
crates/claude-bridge/: Cargo.toml
crates/claude-bridge/src/: adapter.rs  config.rs  formatter.rs  gateway.rs  lib.rs  session.rs
crates/claude-bridge/src/adapters/: telegram.rs
crates/claude-bus/: Cargo.toml
crates/claude-bus/src/: bus.rs  lib.rs
crates/claude-cli/: Cargo.toml
crates/claude-cli/src/: auth.rs  commands.rs  config.rs  diff_display.rs  init.rs  input.rs  main.rs  repl.rs  session.rs  theme.rs  ui.rs
crates/claude-cli/src/output/: helpers.rs  mod.rs  renderer.rs  stream.rs
crates/claude-cli/src/repl_commands/: agents.rs  branch.rs  config.rs  doctor.rs  mcp.rs  memory.rs  mod.rs  plan.rs  pr_comments.rs  prompt.rs  review.rs  session.rs  skill.rs  theme.rs
crates/claude-computer-use/: Cargo.toml
crates/claude-computer-use/src/: input.rs  screenshot.rs  server.rs  session_lock.rs
crates/claude-core/: Cargo.toml
crates/claude-core/src/: agents.rs  bash_classifier.rs  concurrent_sessions.rs  file_history.rs  file_watcher.rs  git_util.rs  image.rs  lib.rs  memory.rs  message.rs  message_sanitize.rs  skills.rs  write_queue.rs
crates/claude-core/src/config/: hooks.rs  tests.rs
crates/claude-core/src/model/: mod.rs  pricing.rs
crates/claude-mcp/: Cargo.toml
crates/claude-mcp/src/: bus.rs  client.rs  protocol.rs  registry.rs  sse.rs  transport.rs  types.rs
crates/claude-rpc/: Cargo.toml
crates/claude-rpc/src/: error.rs  methods.rs  protocol.rs  server.rs  session.rs
crates/claude-rpc/src/transport/: mod.rs  stdio.rs  tcp.rs
crates/claude-swarm/: Cargo.toml
crates/claude-swarm/src/: actors.rs  bridge.rs  bus_adapter.rs  conflict.rs  lib.rs  network.rs  server.rs  session.rs  team_create.rs  team_delete.rs  team_status.rs
crates/clawed-agent/: Cargo.toml
crates/clawed-agent/src/: audit.rs  bus_adapter.rs  context.rs  coordinator.rs  cost.rs  cron_scheduler.rs  dispatch_agent.rs  executor.rs  lib.rs  memory_extractor.rs  state.rs  system_reminder.rs  task_runner.rs  tool_result_storage.rs  traits.rs
crates/clawed-agent/src/compact/: memory.rs  memory_maintenance.rs  micro.rs  mod.rs
crates/clawed-agent/src/engine/: builder.rs  compact.rs  history.rs  impl_traits.rs  mod.rs  session_ops.rs  submit.rs  tests.rs
crates/clawed-agent/src/hooks/: evaluator.rs  execution.rs  mod.rs  tests.rs  types.rs
crates/clawed-agent/src/permissions/: auto_classifier.rs  bus_prompter.rs  bus_user_prompter.rs  helpers.rs  mod.rs  tests.rs  tui.rs
crates/clawed-agent/src/plugin/: loader.rs  manifest.rs  mod.rs
crates/clawed-agent/src/query/: e2e_tests.rs  helpers.rs  mod.rs  tests.rs
crates/clawed-agent/src/system_prompt/: mod.rs  sections.rs
crates/clawed-agent/tests/: integration.rs
crates/clawed-bridge/: Cargo.toml
crates/clawed-bridge/src/: config.rs  formatter.rs  gateway.rs  lib.rs  message.rs  session.rs  webhook.rs
crates/clawed-bridge/src/adapters/: feishu.rs  mod.rs  telegram.rs
crates/clawed-cli/: Cargo.toml  TUI_VERIFICATION.md
crates/clawed-cli/src/: auth.rs  chrome.rs  commands.rs  config.rs  diff_display.rs  init.rs  input.rs  main.rs  markdown.rs  native_installer.rs  repl.rs  session.rs  theme.rs  ui.rs
crates/clawed-cli/src/output/: helpers.rs  mod.rs  renderer.rs  stream.rs
crates/clawed-cli/src/repl_commands/: agents.rs  branch.rs  config.rs  doctor.rs  mcp.rs  memory.rs  mod.rs  plan.rs  pr_comments.rs  prompt.rs  review.rs  (+4 more)
crates/clawed-cli/tests/: e2e_cli.rs
crates/clawed-core/: Cargo.toml
crates/clawed-core/src/: agents.rs  bash_classifier.rs  claude_md.rs  concurrent_sessions.rs  cron.rs  cron_lock.rs  cron_tasks.rs  file_history.rs  file_watcher.rs  git_util.rs  image.rs  lib.rs  memory.rs  message.rs  message_sanitize.rs  migrations.rs  permissions.rs  plugin.rs  secure_storage.rs  session.rs  skills.rs  sync.rs  text_util.rs  token_estimation.rs  tool.rs  upstream_proxy.rs  write_queue.rs
crates/clawed-mcp/: Cargo.toml
crates/clawed-mcp/src/: bus.rs  client.rs  lib.rs  protocol.rs  registry.rs  sse.rs  streamable_http.rs  transport.rs  types.rs
crates/clawed-swarm/: Cargo.toml
crates/clawed-swarm/src/: actors.rs  bridge.rs  bus_adapter.rs  conflict.rs  helpers.rs  lib.rs  messages.rs  network.rs  server.rs  session.rs  team_create.rs  team_delete.rs  team_status.rs  types.rs
crates/clawed-tools/: Cargo.toml
crates/clawed-tools/src/: ask_user.rs  attribution.rs  bash.rs  brief.rs  config_tool.rs  context.rs  cron_create.rs  cron_delete.rs  cron_list.rs  diff_ui.rs  file_edit.rs  file_read.rs  file_write.rs  git.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  mcp_auth.rs  multi_edit.rs  notebook.rs  path_safety.rs  path_util.rs  plan_mode.rs  powershell.rs  push_notification.rs  remote_trigger.rs  repl.rs  send_message.rs  skill_tool.rs  sleep.rs  synthetic_output.rs  task.rs  teleport.rs  todo.rs  tool_search.rs  web_fetch.rs  web_search.rs  workflow.rs  worktree.rs
(+145 files in other folders)
