[workspace]
members = [
    "crates/claude-core",
    "crates/claude-api",
    "crates/claude-tools",
    "crates/claude-agent",
    "crates/claude-bus",
    "crates/claude-cli",
    "crates/claude-mcp",
    "crates/claude-rpc",
    "crates/claude-bridge",
    "crates/claude-computer-use",
    "crates/claude-swarm",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.13.2", features = ["json", "stream", "form"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
walkdir = "2"
glob = "0.3"
ignore = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
similar = { version = "3.0.0", features = ["unicode"] }
tokio-util = "0.7"
base64 = "0.22"
sha2 = "0.11.0"
rand = "0.10.0"
urlencoding = "2"
opener = "0.8.4"
crossterm = { version = "0.29.0", features = ["bracketed-paste"] }
notify = "7"
notify-debouncer-mini = "0.5"
tempfile = "3"
rpassword = "7.4.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
indicatif = "0.18.4"
unicode-width = "0.2"
arboard = "3"
png = "0.17"
rustyline = { version = "15", features = ["with-file-history"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Suppress noise-level pedantic/nursery lints
similar_names = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
items_after_statements = "allow"
ignored_unit_patterns = "allow"
too_long_first_doc_paragraph = "allow"
no_effect_underscore_binding = "allow"
unnecessary_wraps = "allow"
wildcard_imports = "allow"
# Additional noise suppressions
option_if_let_else = "allow"
significant_drop_tightening = "allow"
redundant_closure_for_method_calls = "allow"
needless_continue = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
match_wildcard_for_single_variants = "allow"
missing_const_for_fn = "allow"
map_unwrap_or = "allow"
redundant_clone = "allow"
assigning_clones = "allow"
cast_possible_truncation = "allow"
unreadable_literal = "allow"
or_fun_call = "allow"
unnecessary_literal_bound = "allow"
needless_collect = "allow"
manual_string_new = "allow"
use_self = "allow"
cast_lossless = "allow"
single_match_else = "allow"
unused_async = "allow"
return_self_not_must_use = "allow"
default_trait_access = "allow"
float_cmp = "allow"
used_underscore_binding = "allow"
if_not_else = "allow"
format_push_string = "allow"
uninlined_format_args = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
redundant_pub_crate = "allow"
implicit_clone = "allow"
struct_field_names = "allow"
needless_raw_string_hashes = "allow"
unnested_or_patterns = "allow"
comparison_chain = "allow"
naive_bytecount = "allow"
case_sensitive_file_extension_comparisons = "allow"
unused_peekable = "allow"
format_collect = "allow"
unnecessary_debug_formatting = "allow"
branches_sharing_code = "allow"
field_reassign_with_default = "allow"
iter_over_hash_type = "allow"
trivially_copy_pass_by_ref = "allow"
single_char_pattern = "allow"
option_as_ref_cloned = "allow"
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
used_underscore_items = "allow"
unchecked_time_subtraction = "allow"
suspicious_to_owned = "allow"
ref_option = "allow"
explicit_iter_loop = "allow"
significant_drop_in_scrutinee = "allow"
literal_string_with_formatting_args = "allow"