[package]
name = "claude-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
claude-api = { path = "../claude-api" }
claude-tools = { path = "../claude-tools" }
claude-bus = { path = "../claude-bus" }
claude-mcp = { path = "../claude-mcp" }
claude-computer-use = { path = "../claude-computer-use" }
claude-swarm = { path = "../claude-swarm" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
claude-api = { path = "../claude-api", features = ["test-support"] }
tempfile = { workspace = true }
