[package]
name = "claude-api"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-support = []  # Exposes MockBackend for dependent crate tests

[dependencies]
claude-core = { path = "../claude-core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
opener = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
