[package]
name = "claude-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude"
path = "src/main.rs"

[dependencies]
claude-core = { path = "../claude-core" }
claude-api = { path = "../claude-api" }
claude-tools = { path = "../claude-tools" }
claude-agent = { path = "../claude-agent" }
claude-bus = { path = "../claude-bus" }
claude-mcp = { path = "../claude-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
rpassword = { workspace = true }
syntect = { workspace = true }
similar = { workspace = true }
regex = { workspace = true }
indicatif = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
opener = { workspace = true }
arboard = { workspace = true }
png = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
