[package]
name = "claude-computer-use"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
claude-mcp = { path = "../claude-mcp" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
image = "0.24"

# Cross-platform input simulation
enigo = { version = "0.6.1", features = ["serde"] }

# Screenshot capture
screenshots = "0.8"

# Hostname detection
hostname = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
