[package]
name = "claude-rpc"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC 2.0 server for claude-code-rs — exposes Agent via stdio/TCP transports"

[dependencies]
claude-bus = { path = "../claude-bus" }
claude-agent = { path = "../claude-agent" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
