[package]
name = "clawed-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clawed-core = { path = "../clawed-core" }
clawed-api = { path = "../clawed-api" }
clawed-tools = { path = "../clawed-tools" }
clawed-bus = { path = "../clawed-bus" }
clawed-mcp = { path = "../clawed-mcp" }
clawed-computer-use = { path = "../clawed-computer-use" }
clawed-swarm = { path = "../clawed-swarm" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
clawed-api = { path = "../clawed-api", features = ["test-support"] }
tempfile = { workspace = true }
