[package]
name = "clawed-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clawed"
path = "src/main.rs"

[dependencies]
clawed-core = { path = "../clawed-core" }
clawed-api = { path = "../clawed-api" }
clawed-tools = { path = "../clawed-tools" }
clawed-agent = { path = "../clawed-agent" }
clawed-bus = { path = "../clawed-bus" }
clawed-mcp = { path = "../clawed-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
rpassword = { workspace = true }
syntect = { workspace = true }
similar = { workspace = true }
regex = { workspace = true }
indicatif = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
opener = { workspace = true }
arboard = { workspace = true }
png = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
