[package]
name = "clawed-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }

keyring = { version = "3.6", default-features = false }
whoami = "1.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
filetime = "0.2"
