[package]
name = "clawed-tools"
version = "0.1.0"
edition = "2021"

[features]
default = ["shell", "web", "git", "mcp", "code"]
shell = []
web = ["reqwest"]
git = []
mcp = ["clawed-mcp"]
code = []

[dependencies]
clawed-core = { path = "../clawed-core" }
clawed-mcp = { path = "../clawed-mcp", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
similar = { workspace = true }
syntect = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
